--- a/before_listening/index.html
+++ b/before_listening/index.html
@@ -22,6 +22,6 @@
    </div>
 
 </body>
-<p class=text2>The project is designed by Reon. All the music used and the pictures used in this project is all completed by Reon. In other words, the copy right of the project belong to Reon Chen.</p>
+<p class=text2>The project is designed by Reon. All the music used and the pictures used in this project is all completed by Reon. In other words, the copy right of the project belongs to Reon Chen.</p>
 <p class="text3"> Contact Me: rc4490@nyu.edu</p>
 </html>
