--- a/Reon_MusicMuseum copy/index.html
+++ b/Reon_MusicMuseum copy/index.html
@@ -17,10 +17,10 @@
       
        <div class="content">
            
-           <a href="https://reonluck.github.io/reon-cclab/Reon_MusicMuseum/">Welcome To My Music Museum</a>
+           <a href="https://reonluck.github.io/reon-cclab/before_listening/">Welcome To My Music Museum</a>
        </div>
    </div>
-<p class=text2>The project is designed by Reon. All the music used and the pictures used in this project is all completed by Reon. In other words, the copy right of the project belong to Reon Chen.</p>
+<p class=text2>The project is designed by Reon. All the music used and the pictures used in this project is all completed by Reon. In other words, the copy right of the project belongs to Reon Chen.</p>
 <p class="text3"> Contact Me: rc4490@nyu.edu</p>
 </body>
 </html>
