--- a/Reon_MusicMuseum/index.html
+++ b/Reon_MusicMuseum/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Reon's Music Museum</h1>
+    <h1>Reon's Music Museum</h1>
+    <p class=text>Nights and dreams: The picture on the right uses the flickering of lights to suggest flickering dreams. The flickering of the lights and the volume of the music. I composed the song using piano, and the intro part is calm and used to suggest the serenity of the night. The climax of the song symbolizes people going to dreamland, and their dream.</p>
+    <p class=a>Notice: Click the canvas to play the music. Click again to stop the music.</p>
+    <p>Writter: Reon Chen</p>
     <iframe class="canvas1Frame" src="canvas1" frameborder="0"></iframe>
+    <p class=text1>1</p>
     <iframe class="canvas2Frame" src="canvas2" frameborder="0"></iframe>
 
     <iframe class="canvas3Frame" src="canvas3" frameborder="0"></iframe>
