--- a/Reon_MusicMuseum/index.html
+++ b/Reon_MusicMuseum/index.html
@@ -11,15 +11,15 @@
     <h1>Reon's Music Museum</h1>
     <p class=text>Nights and dreams: The picture on the right uses the flickering of lights to suggest flickering dreams. The flickering of the lights and the volume of the music. I composed the song using piano, and the intro part is calm and used to suggest the serenity of the night. The climax of the song symbolizes people going to dreamland, and their dream.</p>
     <p class=a>Notice: Click the canvas to play the music. Click again to stop the music.</p>
-    <p>Writter: Reon Chen, 2022</p>
+    <p> Composer: Reon Chen, 2022</p>
     <iframe class="canvas1Frame" src="canvas1" frameborder="0"></iframe>
     <p class=text1>Say Goodbye To You: This piece is modeled after some classical piano elements, making this piece with some vintage style. Therefore, for the design of the picture, I used a minimalist design, using a black background and white lines to simulate a vintage effect. </p>
     <p class=b>Notice: Click the canvas to play the music. Click again to stop the music.</p>
-    <p>Writter: Reon Chen, 2022</p>
+    <p> Composer: Reon Chen, 2022</p>
     <iframe class="canvas2Frame" src="canvas2" frameborder="0"></iframe>
     <p class=text2>Ripple: This work depicts the feeling of ripples in my mind. On the canvas, I used ripples to construct the feeling of watergou waves, which might be different when viewed on a fine beach. For the composition of the piece, I used a triplet-based main melody and repeated the passage to construct the melody of the water waves.</p>
     <p class=a>Notice: Click the canvas to play the music. Click again to stop the music.</p>
-    <p>Writter: Reon Chen, 2020</p>
+    <p> Composer: Reon Chen, 2020</p>
     <iframe class="canvas3Frame" src="canvas3" frameborder="0"></iframe>
     
     
