--- a/before_listening/index.html
+++ b/before_listening/index.html
@@ -13,7 +13,7 @@
     <p class=text4>In the first and second part of the page, you will find the Roland electric piano and the software pianoteq, which are the most important parts of my compositions. In the piano, I compose the piece and transcribe it to MIDI format, and then I debug it with pianoteq.</p>
     <p class=text5>在网页的第一部分和第二部分，你们看到的分别是罗兰电钢琴和软件pianoteq。这两部分是我创作曲子的最主要部分。在钢琴中，我创作曲子并将它转录为MIDI格式，而后通过pianoteq调试。</p>
    <div class="full-screen">
-       <img src="image1/bg.png" alt="">
+       <img src="image1/bg.png" alt="" style="opacity: 0.6">
       
        <div class="content">
         <a href="https://reonluck.github.io/reon-cclab/Reon_MusicMuseum/">Listen To My Music</a>
